# mcp-agro-brasil

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
src/mcp_agro_brasil/: __init__.py  server.py
src/mcp_agro_brasil/core/: __init__.py  calendario_safra.py  conversao.py  cotacao.py
src/mcp_agro_brasil/providers/: __init__.py  bcb.py  comex_stat.py  esalq.py  noticias_agricolas.py  open_meteo.py  rss_agro.py  scot.py
tests/: test_clima_cambio.py  test_conversao.py  test_exportacao.py  test_graos.py  test_noticias.py  test_providers.py  test_safra_futuros.py
tests/fixtures/: bcb_ptax.json  canal_rural_rss.xml  comex_stat_exportacao.json  esalq_boi_gordo.html  leite_cepea_rs.html  milho_cepea.html  open_meteo_forecast.json  open_meteo_geocoding.json  scot_boi_gordo.html  soja_cepea.html
