[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-agro-brasil"
version = "0.1.0"
description = "MCP de dados do agronegócio brasileiro - cotações de boi gordo, conversões de unidades e indicadores de mercado."
authors = [
    { name = "Nikolas de Hor", email = "nikolasdehor79@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "mcp",
    "model-context-protocol",
    "claude",
    "agro",
    "agronegocio",
    "brasil",
    "brazil",
    "boi-gordo",
    "cotacao",
    "pecuaria",
    "scot",
    "esalq",
    "agritech",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[project.scripts]
mcp-agro-brasil = "mcp_agro_brasil.server:main"

[project.urls]
Homepage = "https://github.com/DeHor-Labs/mcp-agro-brasil"
Repository = "https://github.com/DeHor-Labs/mcp-agro-brasil"
Issues = "https://github.com/DeHor-Labs/mcp-agro-brasil/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_agro_brasil"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mcp_agro_brasil"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["mcp_agro_brasil.server"]
disallow_untyped_decorators = false
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
